--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,10 +21,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:text="You have nothing To Do! Do something... NOW!"
+        android:text="You have nothing To Do! Do something NOW!"
         android:id="@+id/textView"
-        android:textAlignment="center"
+        android:textSize="12sp"
         android:layout_below="@+id/titleView"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:id="@+id/counterBox"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_alignParentEnd="true"
+        android:text="Item Count"
+        android:textSize="12sp"/>
 
     <EditText
         android:layout_width="match_parent"
